--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,6 +6,8 @@ body {
 .main-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container {
@@ -13,6 +15,34 @@ body {
   transform: translate(-50%, -50%);
   top: 25%;
   left: 50%;
+}
+
+.about {
+  margin-top: 100px;
+  width: 70%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  animation: pulse-color 20s infinite alternate;
+  padding: 24px;
+  border-radius: 16px;
+  justify-content: space-between;
+  img {
+    height: 300px;
+    width: 300px;
+    align-self: flex-end;
+  }
+}
+
+.profile {
+  align-self: center;
+}
+
+.definition {
+  margin-left: 16px;
+  p {
+    margin: 1em;
+  }
 }
 
 .glitch {
@@ -115,28 +145,20 @@ body {
   animation-duration: 5s;
   // animation: pulse 2s infinite alternate;
 }
-
-// @keyframes pulse {
-//   0% {
-//     text-shadow: 0 0 35px rgb(223, 191, 191);;
-//   }
-//   100% {
-//     text-shadow: 0 0 35px lightgreen;
-//   }
-  // 40% {
-  //   text-shadow: 0 0 70px #372554;
-  // }
-  // 60% {
-  //   text-shadow: 0 0 70px #5C0029;
-  // }
-  // 80% {
-  //   text-shadow: 0 0 70px #1F271B;
-  // }
-  // 100% {
-  //   text-shadow: 0 0 50px #f70fa2
-  //
-  // }
-// }
+@keyframes pulse-color {
+  0% {
+    box-shadow: 0 0 35px orange;
+  }
+  25% {
+    box-shadow: 0 0 35px lightblue;
+  }
+  50% {
+    box-shadow: 0 0 70px lightgreen;
+  }
+  75% {
+    box-shadow: 0 0 70px rgb(223, 191, 191);
+  }
+}
 
 @keyframes fadeInOpacity {
   0% {
